[package]
name = "mc-verifier"
version = "0.1.0"
authors = ["Aaron Hill <aa1ronham@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.13", features = ["macros"] }
byteorder = "1.3.4"
packet_macro = { path = "packet_macro" }
lazy_static = "1.4.0"
bytes = "0.5.4"
openssl = "0.10.28"
num-bigint = "0.2.6"
libc = "0.2.68"
json = "0.12.3"
stream-cancel = "0.5.2"
uuid = { version = "0.8.1", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
base64 = "0.12.0"
image = "0.23.2"
env_logger = "0.7.1"
chrono = "0.4.11"
atomicbox = "0.3.0"
futures-async-stream = "0.1.3"
failure = "0.1.7"
tokio-util = { version = "0.3.0", features = ["codec"] }
futures = "0.3.4"
#reqwest = "0.10.4"
reqwest = { git = "https://github.com/seanmonstar/reqwest" }
jpeg-decoder = "0.1.18"
term_size = "0.3.1"
base64-serde = "0.5.0"
termimage = "1.1.0"

[workspace]
members = ["packet_macro"]

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "creation_time"
harness = false
