[package]
name = "mc-verifier"
version = "0.1.0"
authors = ["Aaron Hill <aa1ronham@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.21", features = ["macros"] }
byteorder = "1.3.4"
packet_macro = { path = "packet_macro" }
lazy_static = "1.4.0"
bytes = "0.5.4"
openssl = "0.10.29"
num-bigint = "0.2.6"
libc = "0.2.71"
json = "0.12.4"
uuid = { version = "0.8.1", features = ["serde"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
base64 = "0.12.1"
image = "0.23.4"
env_logger = "0.7.1"
chrono = "0.4.11"
atomicbox = "0.3.0"
futures-async-stream = "0.2.1"
failure = "0.1.8"
tokio-util = { version = "0.3.1", features = ["codec"] }
futures = "0.3.5"
reqwest = "0.10.6"
jpeg-decoder = "0.1.19"
term_size = "0.3.2"
base64-serde = "0.5.1"
termimage = "1.1.0"

[workspace]
members = ["packet_macro"]

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "creation_time"
harness = false
